--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -37,7 +37,7 @@
   </nav>
   </header>
 
-<h2 id="Top"> Our Menu</h2>
+<h2 id="Top" class="text-center> Our Menu</h2>
 
 <div class="row">
   <div id="chicken-section" class="col-lg-4 col-md-6 col-sm-12"> <p><span> Chicken</span> Lorem ipsum dolor sit amet,
